# backend/routes/index.js
@@ -2,10 +2,12 @@ const express = require('express');
 const router = express.Router();
 
 // importation des routes api
-const registerRoute = require('./user/register') 
+const registerController = require('./user/register') 
+const loginController = require('./user/login')
 
 
 // afectation des routes 
-router.use('/auth/register', registerRoute);
+router.use('/auth/register', registerController);
+router.use('/auth/login', loginController );
 
 module.exports = router;
